RESOLVED FIXED135132
Random crashes on the Web Thread due to Timers firing on the wrong thread in the UI process
https://bugs.webkit.org/show_bug.cgi?id=135132
Summary Random crashes on the Web Thread due to Timers firing on the wrong thread in ...
Tim Horton
Reported 2014-07-21 14:59:06 PDT
Attachments
patch (6.60 KB, patch)
2014-07-21 15:11 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-07-21 15:11:36 PDT
Tim Horton
Comment 2 2014-07-21 15:18:00 PDT
Benjamin Poulain
Comment 3 2014-07-23 01:12:58 PDT
Neat! Good problem to fix.
Note You need to log in before you can comment on or make changes to this bug.